<?xml version="1.0" encoding="UTF-8"?>
<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
    <device id="retina4_0" orientation="portrait">
        <adaptation id="fullscreen"/>
    </device>
    <dependencies>
        <deployment identifier="iOS"/>
        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <customFonts key="customFonts">
        <array key="HelveticaNeue.ttc">
            <string>HelveticaNeue-Bold</string>
        </array>
        <array key="HelveticaNeueLights.ttc">
            <string>HelveticaNeue-Light</string>
        </array>
    </customFonts>
    <objects>
        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="VOYLoginViewController" customModule="Voy" customModuleProvider="target">
            <connections>
                <outlet property="btLogin" destination="7vn-vv-asa" id="7cv-E7-Kc3"/>
                <outlet property="lbHey" destination="SEE-y1-SBu" id="cwv-k1-MmO"/>
                <outlet property="passwordView" destination="x83-6K-eFi" id="ddY-XG-N9M"/>
                <outlet property="scrollView" destination="dIk-ii-lej" id="Rqw-se-Kcn"/>
                <outlet property="stackViewIcons" destination="RRE-U2-A8D" id="HkO-hA-ZYl"/>
                <outlet property="userNameView" destination="aFv-sJ-4fm" id="5sB-Li-Jf5"/>
                <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
            </connections>
        </placeholder>
        <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
        <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="i5M-Pr-FkT">
            <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
            <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
            <subviews>
                <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="dIk-ii-lej" customClass="TPKeyboardAvoidingScrollView">
                    <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                    <subviews>
                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="7Aw-3c-Vyc" userLabel="ContentView">
                            <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                            <subviews>
                                <stackView opaque="NO" contentMode="scaleToFill" spacing="4" translatesAutoresizingMaskIntoConstraints="NO" id="RRE-U2-A8D">
                                    <rect key="frame" x="68.5" y="81.5" width="183" height="65"/>
                                    <subviews>
                                        <imageView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" image="group19" translatesAutoresizingMaskIntoConstraints="NO" id="dU9-xK-nNB">
                                            <rect key="frame" x="0.0" y="0.0" width="55" height="65"/>
                                        </imageView>
                                        <imageView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" image="group14" translatesAutoresizingMaskIntoConstraints="NO" id="te7-pP-kgB">
                                            <rect key="frame" x="59" y="0.0" width="66" height="65"/>
                                        </imageView>
                                        <imageView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" image="group12" translatesAutoresizingMaskIntoConstraints="NO" id="6tW-ZW-yye">
                                            <rect key="frame" x="129" y="0.0" width="54" height="65"/>
                                        </imageView>
                                    </subviews>
                                    <constraints>
                                        <constraint firstAttribute="width" constant="183" id="5mB-Ym-lOz"/>
                                        <constraint firstAttribute="height" constant="65" id="d3q-nS-qIa"/>
                                    </constraints>
                                </stackView>
                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="aFv-sJ-4fm" customClass="VOYTextFieldView" customModule="Voy">
                                    <rect key="frame" x="24.5" y="298.5" width="270" height="45"/>
                                    <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                    <constraints>
                                        <constraint firstAttribute="width" constant="270" id="H19-JD-JQP"/>
                                        <constraint firstAttribute="height" constant="45" id="s2Z-De-7Xi"/>
                                    </constraints>
                                    <userDefinedRuntimeAttributes>
                                        <userDefinedRuntimeAttribute type="string" keyPath="placeholder" value="Username"/>
                                    </userDefinedRuntimeAttributes>
                                </view>
                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Hey!" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="SEE-y1-SBu">
                                    <rect key="frame" x="107.5" y="194.5" width="104" height="80"/>
                                    <constraints>
                                        <constraint firstAttribute="height" constant="80" id="2ra-a4-Lx5"/>
                                        <constraint firstAttribute="width" constant="104" id="PjF-km-iZ5"/>
                                    </constraints>
                                    <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="40"/>
                                    <color key="textColor" red="0.0" green="0.79607843140000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                    <nil key="highlightedColor"/>
                                </label>
                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7vn-vv-asa">
                                    <rect key="frame" x="24.5" y="481" width="270" height="45"/>
                                    <color key="backgroundColor" red="0.0" green="0.79607843140000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                    <constraints>
                                        <constraint firstAttribute="width" constant="270" id="1Be-33-WbY"/>
                                        <constraint firstAttribute="height" constant="45" id="diQ-MY-TNz"/>
                                    </constraints>
                                    <fontDescription key="fontDescription" name="HelveticaNeue-Light" family="Helvetica Neue" pointSize="16"/>
                                    <state key="normal" title="Login">
                                        <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                    </state>
                                    <userDefinedRuntimeAttributes>
                                        <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
                                            <integer key="value" value="7"/>
                                        </userDefinedRuntimeAttribute>
                                    </userDefinedRuntimeAttributes>
                                    <connections>
                                        <action selector="btLoginTapped:" destination="-1" eventType="touchUpInside" id="mPa-TO-m0n"/>
                                    </connections>
                                </button>
                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="x83-6K-eFi" customClass="VOYTextFieldView" customModule="Voy">
                                    <rect key="frame" x="24.5" y="357.5" width="270" height="45"/>
                                    <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                    <constraints>
                                        <constraint firstAttribute="width" constant="270" id="SM0-Xs-JQb"/>
                                        <constraint firstAttribute="height" constant="45" id="fp5-rE-aJJ"/>
                                    </constraints>
                                    <userDefinedRuntimeAttributes>
                                        <userDefinedRuntimeAttribute type="string" keyPath="placeholder" value="Password"/>
                                        <userDefinedRuntimeAttribute type="boolean" keyPath="password" value="YES"/>
                                    </userDefinedRuntimeAttributes>
                                </view>
                            </subviews>
                            <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                            <constraints>
                                <constraint firstItem="aFv-sJ-4fm" firstAttribute="centerX" secondItem="7Aw-3c-Vyc" secondAttribute="centerX" id="7dr-lt-utf"/>
                                <constraint firstAttribute="bottom" secondItem="7vn-vv-asa" secondAttribute="bottom" constant="42" id="EXz-B4-hws"/>
                                <constraint firstItem="RRE-U2-A8D" firstAttribute="centerY" secondItem="7Aw-3c-Vyc" secondAttribute="centerY" constant="-170" id="KA6-ni-nsf"/>
                                <constraint firstItem="x83-6K-eFi" firstAttribute="centerX" secondItem="7Aw-3c-Vyc" secondAttribute="centerX" id="NG3-t9-Ks8"/>
                                <constraint firstItem="7vn-vv-asa" firstAttribute="centerX" secondItem="7Aw-3c-Vyc" secondAttribute="centerX" id="QfY-SC-NU3"/>
                                <constraint firstItem="RRE-U2-A8D" firstAttribute="centerX" secondItem="7Aw-3c-Vyc" secondAttribute="centerX" id="Vd4-WC-Hjd"/>
                                <constraint firstItem="SEE-y1-SBu" firstAttribute="centerX" secondItem="7Aw-3c-Vyc" secondAttribute="centerX" id="Y2x-ks-P9z"/>
                                <constraint firstItem="aFv-sJ-4fm" firstAttribute="top" secondItem="SEE-y1-SBu" secondAttribute="bottom" constant="24" id="c1R-Jk-rAU"/>
                                <constraint firstItem="x83-6K-eFi" firstAttribute="top" secondItem="aFv-sJ-4fm" secondAttribute="bottom" constant="14" id="vxC-Rf-vWy"/>
                                <constraint firstItem="SEE-y1-SBu" firstAttribute="top" secondItem="RRE-U2-A8D" secondAttribute="bottom" constant="48" id="zLE-Dr-xNc"/>
                            </constraints>
                        </view>
                    </subviews>
                    <constraints>
                        <constraint firstItem="7Aw-3c-Vyc" firstAttribute="top" secondItem="dIk-ii-lej" secondAttribute="top" id="D73-kc-e65"/>
                        <constraint firstAttribute="trailing" secondItem="7Aw-3c-Vyc" secondAttribute="trailing" id="IT3-sc-tKP"/>
                        <constraint firstItem="7Aw-3c-Vyc" firstAttribute="height" secondItem="dIk-ii-lej" secondAttribute="height" id="M04-Gl-Spk"/>
                        <constraint firstItem="7Aw-3c-Vyc" firstAttribute="leading" secondItem="dIk-ii-lej" secondAttribute="leading" id="k8F-c4-Lgn"/>
                        <constraint firstAttribute="bottom" secondItem="7Aw-3c-Vyc" secondAttribute="bottom" id="mbt-ew-szB"/>
                        <constraint firstItem="7Aw-3c-Vyc" firstAttribute="width" secondItem="dIk-ii-lej" secondAttribute="width" id="pwo-LD-Hk4"/>
                    </constraints>
                </scrollView>
            </subviews>
            <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
            <constraints>
                <constraint firstAttribute="trailing" secondItem="dIk-ii-lej" secondAttribute="trailing" id="DyX-m2-Xui"/>
                <constraint firstAttribute="bottom" secondItem="dIk-ii-lej" secondAttribute="bottom" id="UvA-c4-Fil"/>
                <constraint firstItem="dIk-ii-lej" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="XVc-lI-n3C"/>
                <constraint firstItem="dIk-ii-lej" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="iYg-um-7TB"/>
            </constraints>
            <point key="canvasLocation" x="33.5" y="54.5"/>
        </view>
    </objects>
    <resources>
        <image name="group12" width="54" height="53"/>
        <image name="group14" width="66" height="65"/>
        <image name="group19" width="55" height="55"/>
    </resources>
</document>
